--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "5885c1ce-9a2c-48bb-bdf3-5303b4458add"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
