cambio de nombre

--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "photo-journal": {
+    "reeled": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -45,7 +45,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/photo-journal",
+            "outputPath": "dist/reeled",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -97,10 +97,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "photo-journal:build:production"
+              "browserTarget": "reeled:build:production"
             },
             "development": {
-              "browserTarget": "photo-journal:build:development"
+              "browserTarget": "reeled:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -108,7 +108,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "photo-journal:build"
+            "browserTarget": "reeled:build"
           }
         },
         "test": {
@@ -132,5 +132,5 @@
       }
     }
   },
-  "defaultProject": "photo-journal"
+  "defaultProject": "reeled"
 }
